Add dummy fragments

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kaarvik.lvysaurworkouttracker.fragments.WorkoutHistoryFragment">
+    tools:context="com.kaarvik.lvysaurworkouttracker.fragments.SettingsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="50dp"
-        android:text="Workout History Fragment" />
+        android:text="Settings Fragment" />
 
 </FrameLayout>
