Add floating action button to workout history fragment

--- a/app/src/main/res/layout/fragment_workout_history.xml
+++ b/app/src/main/res/layout/fragment_workout_history.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.kaarvik.lvysaurworkouttracker.fragments.WorkoutHistoryFragment">
@@ -10,5 +11,13 @@
         android:layout_height="match_parent"
         android:paddingTop="50dp"
         android:text="Workout History Fragment" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_workout_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/ic_add_white_48px" />
 
 </FrameLayout>
