--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,7 +2,8 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group android:id="@+id/group_main"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_workout"
             android:icon="@drawable/ic_drawer_workout"
@@ -17,13 +18,14 @@
             android:title="Settings" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_feedback"
-                android:icon="@drawable/ic_drawer_feedback"
-                android:title="Feedback" />
-        </menu>
-    </item>
+
+    <group android:id="@+id/group_other"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_feedback"
+            android:icon="@drawable/ic_drawer_feedback"
+            android:title="Feedback" />
+    </group>
+
 
 </menu>
