--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -1,55 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/exercise_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="#bbdefb"
-                android:layout_margin="8dp"
-                android:elevation="2dp">
-            </LinearLayout>
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical" >-->
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="#bbdefb"
-                android:layout_margin="8dp"
-                android:elevation="2dp">
-            </LinearLayout>
+            <!--<android.support.v7.widget.CardView-->
+                <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+                <!--android:id="@+id/card_view"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_width="200dp"-->
+                <!--android:layout_height="200dp"-->
+                <!--android:layout_marginTop="4dp"-->
+                <!--android:layout_marginBottom="4dp"-->
+                <!--card_view:cardCornerRadius="4dp">-->
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="#bbdefb"
-                android:layout_margin="8dp"
-                android:elevation="2dp">
-            </LinearLayout>
+                <!--<TextView-->
+                    <!--android:id="@+id/info_text"-->
+                    <!--android:text="Testing 123"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent" />-->
+            <!--</android.support.v7.widget.CardView>-->
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:background="#bbdefb"
-                android:layout_margin="8dp"
-                android:elevation="2dp">
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+            <!--<android.support.v7.widget.CardView-->
+                <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+                <!--android:id="@+id/card_view2"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_width="200dp"-->
+                <!--android:layout_height="200dp"-->
+                <!--android:layout_marginTop="4dp"-->
+                <!--android:layout_marginBottom="4dp"-->
+                <!--card_view:cardCornerRadius="4dp">-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/info_text2"-->
+                    <!--android:text="Testing 456"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent" />-->
+            <!--</android.support.v7.widget.CardView>-->
+
+            <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
+                <!--&lt;!&ndash;android:orientation="vertical"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="150dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:background="#bbdefb"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_margin="8dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:elevation="2dp">&ndash;&gt;-->
+            <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
+
+            <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
+                <!--&lt;!&ndash;android:orientation="vertical"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="150dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:background="#bbdefb"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_margin="8dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:elevation="2dp">&ndash;&gt;-->
+            <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
+
+            <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
+                <!--&lt;!&ndash;android:orientation="vertical"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="150dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:background="#bbdefb"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_margin="8dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:elevation="2dp">&ndash;&gt;-->
+            <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
+
+            <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
+                <!--&lt;!&ndash;android:orientation="vertical"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="150dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:background="#bbdefb"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_margin="8dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:elevation="2dp">&ndash;&gt;-->
+            <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
+        <!--</LinearLayout>-->
+    <!--</ScrollView>-->
 
 </LinearLayout>
