--- a/app/src/main/res/layout/fragment_single_exercise.xml
+++ b/app/src/main/res/layout/fragment_single_exercise.xml
@@ -9,7 +9,10 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="4dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         card_view:cardCornerRadius="4dp">
 
         <TextView
@@ -17,6 +20,7 @@
             android:text="Testing 123"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
