--- a/app/src/main/res/layout/fragment_single_set.xml
+++ b/app/src/main/res/layout/fragment_single_set.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="50dp"
+    android:paddingLeft="8dp">
 
-    <TextView
-        android:id="@+id/test_text2"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Placeholder" />
+    <com.kaarvik.lvysaurworkouttracker.views.RepsNumberButton
+        android:id="@+id/button_set_reps"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:layout_margin="4dp"/>
 
 
 </LinearLayout>
