Sets default grey to set buttons, changes to green if set finsihed greater than goal reps, or yellow if less than goal

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+
+    <color name="set_button_success">#4CAF50</color>
+    <color name="set_button_warning">#F9A825</color>
+    <color name="set_button_default">#9E9E9E</color>
 </resources>
