--- a/app/src/main/res/layout/fragment_single_set.xml
+++ b/app/src/main/res/layout/fragment_single_set.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="50dp"
@@ -10,7 +11,8 @@
         android:id="@+id/button_set_reps"
         android:layout_width="120dp"
         android:layout_height="40dp"
-        android:layout_margin="4dp"/>
+        android:layout_margin="4dp"
+        app:backGroundColor="@color/set_button_default"/>
 
 
 </LinearLayout>
