Add basic plate calculator. Condense exercise utility methods into Exercise class

--- a/app/src/main/res/layout/fragment_single_exercise.xml
+++ b/app/src/main/res/layout/fragment_single_exercise.xml
@@ -60,19 +60,54 @@
                 android:orientation="vertical"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="2" />
 
-            <TextView
-                android:id="@+id/text_weight"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/weight_calculator"
+                android:orientation="vertical"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:gravity="center"
-                android:text="125lbs"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                tools:text="125lbs" />
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:tint="@color/icon_subtle"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="0dp"
+                    android:src="@drawable/ic_filter_list_black_24dp" />
+
+                <TextView
+                    android:id="@+id/text_exercise_weight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textAlignment="center"
+                    android:layout_marginBottom="8dp"
+                    android:text="145lbs"/>
+
+                <TextView
+                    android:id="@+id/text_plate_calculator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textAlignment="center"
+                    tools:text="1 x 45\n1 x 25\n2 x 5"/>
+
+            </LinearLayout>
+
+            <!--<TextView-->
+                <!--android:id="@+id/text_weight"-->
+                <!--android:textAppearance="@style/TextAppearance.AppCompat.Subhead"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="0"-->
+                <!--android:gravity="center"-->
+                <!--android:text="125lbs"-->
+                <!--android:paddingStart="8dp"-->
+                <!--android:paddingEnd="8dp"-->
+                <!--tools:text="125lbs" />-->
 
             </LinearLayout>
 
