--- a/app/src/main/res/layout/fragment_single_set.xml
+++ b/app/src/main/res/layout/fragment_single_set.xml
@@ -12,7 +12,8 @@
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_margin="4dp"
-        app:backGroundColor="@color/set_button_default"/>
+        app:backGroundColor="@color/set_button_default"
+        app:textSize="8sp"/>
 
 
 </LinearLayout>
