--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 
+    <color name="icon_subtle">#757575</color>
+
     <color name="set_button_success">#4CAF50</color>
     <color name="set_button_warning">#F9A825</color>
     <color name="set_button_default">#9E9E9E</color>
