--- a/app/src/main/res/layout/fragment_single_exercise.xml
+++ b/app/src/main/res/layout/fragment_single_exercise.xml
@@ -80,12 +80,27 @@
 
                 <TextView
                     android:id="@+id/text_exercise_weight"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:textAlignment="center"
                     android:layout_marginBottom="8dp"
-                    android:text="145lbs"/>
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    tools:text="45lbs"/>
+
+                <EditText
+                    android:id="@+id/edit_exercise_weight"
+                    android:visibility="gone"
+                    android:layout_width="75dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textAlignment="center"
+                    android:inputType="number"
+                    android:textSize="16sp"
+                    android:maxLines="1"/>
 
                 <TextView
                     android:id="@+id/text_plate_calculator"
